margin-left-16 to ml-16

--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -25,7 +25,7 @@
                     <button class="search-btn"><i class="fa fa-search fa-lg" aria-hidden="true"></i></button>
                 </form>
             </div>
-            <div class="flex-this align-center margin-left-16">
+            <div class="flex-this align-center ml-16">
                 <p>
                     Browse: 
                     <a 
