--- a/templates/communities/edit-label.html
+++ b/templates/communities/edit-label.html
@@ -25,7 +25,7 @@
                         <label class="block">Language <small>(select from dropdown)</small></label>
                         <div class="autocomplete flex-this align-center" style="display:flex;">
                             {{ form.language }}
-                            <button name="clear-language-btn" class="primary-btn white-btn margin-left-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
+                            <button name="clear-language-btn" class="primary-btn white-btn ml-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
                         </div>
                     </div>                    
                 </div>
@@ -90,7 +90,7 @@
                                     <label class="block">Translated Language <small>(select from dropdown)</small></label>
                                     <div class="autocomplete flex-this align-center" style="display:flex;">
                                         {{ translation_form.language }}
-                                        <button name="clear-language-btn" class="primary-btn white-btn margin-left-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
+                                        <button name="clear-language-btn" class="primary-btn white-btn ml-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
                                     </div>
                                 </div>
                             </div>
