--- a/templates/communities/view-label.html
+++ b/templates/communities/view-label.html
@@ -180,7 +180,7 @@
         </div>
     </div>
 
-    <div class="margin-left-16">
+    <div class="ml-16">
         <h3>Explore your other customized Labels</h3>
 
         <div class="flex-this w-100 wrap">
