--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -29,7 +29,7 @@
 
                     <div class="autocomplete flex-this align-center" style="display:flex;">
                         {{ tran_form.language }}
-                        <button name="clear-language-btn" class="primary-btn white-btn margin-left-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
+                        <button name="clear-language-btn" class="primary-btn white-btn ml-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
                     </div>
                 </div>
             </div>
