--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -45,7 +45,7 @@
 
     <div class="flex-this">
         <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle."></div>
-        <div class="flex-this column margin-left-16">
+        <div class="flex-this column ml-16">
             <div class="w-90">
                 <h3 class="mt-0">Open to Collaborate</h3>
 
@@ -155,7 +155,7 @@
         <div id="openDiv-disclosureTK" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
-                <div class="flex-this column margin-left-16">
+                <div class="flex-this column ml-16">
                     <div class="w-90">
                         <h2 class="mt-0">Traditional Knowledge Notice</h2>
                         <p class="mt-0">
@@ -177,7 +177,7 @@
         <div id="openDiv-disclosureBC" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
-                <div class="flex-this column margin-left-16">
+                <div class="flex-this column ml-16">
                     <div class="w-90">
                         <h2 class="mt-0">Biocultural Notice</h2>
                         <p class="mt-0">
@@ -199,7 +199,7 @@
         <div id="openDiv-disclosureAI" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
                 <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line."></div>
-                <div class="flex-this column margin-left-16">
+                <div class="flex-this column ml-16">
                     <div class="w-90">
                         <h2 class="mt-0">Attribution Incomplete Notice</h2>
                         <p class="mt-0">
@@ -256,7 +256,7 @@
         </div>
         <div class="flex-this">
             <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-overall-notice.png' %}" width="119px" alt="Overall Collections Care Notice icon. White square with top right corner folded. Inside is a circle outline made of different sized dots around “LC”."></div>
-            <div class="flex-this column margin-left-16">
+            <div class="flex-this column ml-16">
                 <div class="w-80">
                     <p>
                         <span class="bold">Why use these Notices?</span><br>
