--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -43,11 +43,11 @@
         <div class="flex-this column w-80">
 
             {% if main_area == 'boundary' %}
-                <div class="w-98 margin-left-16">
+                <div class="w-98 ml-16">
                     {% include 'partials/_update-boundary-main-area.html' %}
                 </div>
             {% else %}
-                <div class="w-70 margin-left-16">
+                <div class="w-70 ml-16">
                 {% include 'partials/_update-account-main-area.html' %}
                 </div>
             {% endif %}
