--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -60,7 +60,7 @@
                                 {% if label_count < 10 %}0{{ label_count }}{% else %}{{ label_count }}{% endif %}
                             </p>
                         </div>
-                        <div class="margin-left-16"><span>Labels</span></div>
+                        <div class="ml-16"><span>Labels</span></div>
                     </div>
     
                     <div class="stats-card flex-this flex-start">
@@ -71,7 +71,7 @@
                                 {% if notice_count < 10 %}0{{ notice_count }}{% else %}{{ notice_count }}{% endif %}
                             </p>
                         </div>
-                        <div class="margin-left-16"><span>Notices</span></div>
+                        <div class="ml-16"><span>Notices</span></div>
                     </div>
     
                     <div class="stats-card flex-this flex-start">
@@ -81,7 +81,7 @@
                                 {% if connect_count < 10 %}0{{ connect_count }}{% else %}{{ connect_count }}{% endif %}
                             </p>
                         </div>
-                        <div class="margin-left-16"><span>Connections</span></div>
+                        <div class="ml-16"><span>Connections</span></div>
                     </div>
                 </div>
 
