--- a/templates/public.html
+++ b/templates/public.html
@@ -40,7 +40,7 @@
                                 </div>
                             {% endif %}                            
                         </div>
-                        <div class="margin-left-16">
+                        <div class="ml-16">
                             {% if env == "SANDBOX" %}
                                 <div class="btn-with-helptext">
                                     <a class="primary-btn disabled-btn">Contact Us</a>
@@ -195,7 +195,7 @@
                             {% endif %}                                
                         </div>
                         
-                        <div class="margin-left-16">
+                        <div class="ml-16">
                             {% if env == "SANDBOX" %}
                                 <div class="btn-with-helptext">
                                     <a class="primary-btn disabled-btn">Contact Us</a>
@@ -326,7 +326,7 @@
                 {% if researcher.contact_email_public %}
                     {% if not researcher.user == request.user %}
 
-                        <div class="margin-left-16">
+                        <div class="ml-16">
                             {% if env == "SANDBOX" %}
                                 <div class="btn-with-helptext">
                                     <a class="primary-btn disabled-btn">Contact Me</a>
