--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- NOTICE CHECKBOXES -->
-    <div class="flex-this w-40 space-between margin-left-16 margin-bottom-16">     
+    <div class="flex-this w-40 space-between ml-16 margin-bottom-16">     
         <div class="flex-this column center-text">
             <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" width="73px" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
             <div><p id="title-tk-notice" class="grey-text">Traditional<br> Knowledge Notice</p></div>
@@ -39,7 +39,7 @@
             <span class="ml-8">Select</span></div>
         </div>
 
-        <div class="flex-this column center-text margin-left-16">
+        <div class="flex-this column center-text ml-16">
             <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" width="73px" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
             <div><p id="title-bc-notice" class="grey-text">Biocultural<br> Notice</p></div>
             <div class="notice-checkbox-container">
@@ -61,7 +61,7 @@
             <span class="ml-8">Select</span></div>
         </div>
 
-        <div class="flex-this column center-text margin-left-16 align-center">
+        <div class="flex-this column center-text ml-16 align-center">
             <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line." width="73px"></div>
             <div><p id="title-attr-notice" class="grey-text">Attribution Incomplete <br> Notice</p></div>
             <div class="notice-checkbox-container">
