--- a/templates/accounts/update-profile.html
+++ b/templates/accounts/update-profile.html
@@ -18,7 +18,7 @@
                         <label for="first_name">First Name </label><br>
                         {{ user_form.first_name }}<br>
                     </div>
-                    <div class="w-50 margin-left-16">
+                    <div class="w-50 ml-16">
                         <label for="last_name">Last Name </label><br>
                         {{ user_form.last_name }}<br>
                     </div>                 
@@ -46,7 +46,7 @@
                         {{ profile_form.position }}
                     </div>
 
-                    <div class="w-50 margin-left-16">
+                    <div class="w-50 ml-16">
                         <label for="affiliation">Affiliation </label><br>                                           
                         {{ profile_form.affiliation }}
                     </div>
@@ -68,7 +68,7 @@
                 {% endif %}
             </div>
 
-            <div class="w-50 mt-8 margin-left-16">
+            <div class="w-50 mt-8 ml-16">
                 <label>Languages Spoken</label><br>
                 {{ profile_form.languages_spoken }}
                 {% if profile_form.languages_spoken.errors %}
@@ -84,7 +84,7 @@
                         <label for="city_town">City or Town </label><br>
                         {{ profile_form.city_town }}
                     </div>
-                    <div class="w-100 margin-left-16">
+                    <div class="w-100 ml-16">
                         <label for="state_province_region">State or Province </label><br>                                           
                         {{ profile_form.state_province_region }}
                     </div>
