--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -45,7 +45,7 @@
         <div class="content-card-v2 content-card-space"> 
             <h2 class="mt-0">Proposed Edit</h2>
             <div class="flex-this mb-8 mt-8 about-this-label">
-                <div class="w-20 margin-left-16 margin-top-16 margin-bottom-16">
+                <div class="w-20 ml-16 margin-top-16 margin-bottom-16">
                     {% if bclabel %}
                         {% include 'bclabels/which-label.html' %}
                     {% endif %}
