--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -17,7 +17,7 @@
 <div class="content-card-v2 content-card-space">
     <h3 class="mt-0">Step 1. Select a Label to customize</h3>
     <div class="margin-bottom-16 margin-top-16 w-100 about-this-label">    
-        <div class="flex-this margin-left-16 margin-right-16 pointer-event-none">
+        <div class="flex-this ml-16 margin-right-16 pointer-event-none">
 
             <div id="target-img-div" class="margin-top-16">
                 <img
@@ -196,7 +196,7 @@
                 >
             </div>
 
-            <div class="margin-left-16 w-70">
+            <div class="ml-16 w-70">
                 <p id="labelNamePTag" class="bold"></p>
                 <small class="bold">Why Use This Label?</small>
                 <p id="whyUseText"></p>
@@ -239,7 +239,7 @@
 
                     <div class="autocomplete flex-this align-center" style="display:flex;">
                         {{ form.language }}
-                        <button name="clear-language-btn" class="primary-btn white-btn margin-left-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
+                        <button name="clear-language-btn" class="primary-btn white-btn ml-16 hide" style="min-height:40px;">Clear<i class="fa-regular fa-eraser"></i></button>
                     </div>
                     
                 </div>
