--- a/templates/partials/infocards/_researcher-dashcard.html
+++ b/templates/partials/infocards/_researcher-dashcard.html
@@ -93,14 +93,14 @@
                 {% get_labels_count researcher as total_labels %}
                 <div class="stats-card flex-this flex-start">
                     <div><p>{% if total_labels < 10 %} 0{{ total_labels }} {% else %} {{ total_labels }} {% endif %}</p></div>
-                    <div class="margin-left-16"><span>Labels</span></div>
+                    <div class="ml-16"><span>Labels</span></div>
                 </div>
 
                 <!-- Count of notices placed by researcher -->
                 {% get_notices_count researcher as total_notices %}
                 <div class="stats-card flex-this flex-start">
                     <div><p>{% if total_notices < 10 %} 0{{ total_notices }} {% else %} {{ total_notices }} {% endif %}</p></div>
-                    <div class="margin-left-16"><span>Notices</span></div>
+                    <div class="ml-16"><span>Notices</span></div>
                 </div>
     
                 <div class="stats-card flex-this flex-start">
@@ -110,7 +110,7 @@
                             {% if connect_count < 10 %}0{{ connect_count }}{% else %}{{ connect_count }}{% endif %}
                         </p>
                     </div>
-                    <div class="margin-left-16">
+                    <div class="ml-16">
                         <span>Connections</span>
                     </div>
                 </div>
