margin-left-55 to ml-55p

--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -15,7 +15,7 @@
                 <button type="button" class="w-50 white-btn flex-this align-center justify-center" onclick="showConfirmationAlert()">
                     <img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt="">
                     <span class="ml-1p primary-black-text">Unlink With Google</span>
-                    <i class="fa-solid fa-link-simple-slash margin-left-55"></i>
+                    <i class="fa-solid fa-link-simple-slash ml-55p"></i>
                 </button>
             </div>
         </form>
@@ -26,7 +26,7 @@
                 <button type="submit" class="w-50 white-btn flex-this align-center justify-center">
                     <img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt="">
                     <span class="ml-1p primary-black-text">Link With Google</span>
-                    <i class="fa-solid fa-link-simple margin-left-55"></i>
+                    <i class="fa-solid fa-link-simple ml-55p"></i>
                 </button>
             </div>
         </form>
