margin-right-16 to mr-16

--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -53,7 +53,7 @@
                         {% include 'tklabels/which-label.html' %}
                     {% endif %}
                 </div>   
-                <div class="w-90 margin-right-16">
+                <div class="w-90 mr-16">
                     <div>
                         <p class="bold">
                             {% if bclabel.name %}{{ bclabel.name }}{% endif %}
