--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -126,7 +126,7 @@
     {% for bclabel in bclabels %}
         <div id="open-div-{{ bclabel.unique_id }}" style="height: 0px; overflow: hidden;" class="div-toggle">
             <div class="full-label-card flex-this">
-                <div class="margin-right-16"><img src="{{bclabel.img_url}}" class="label-large pointer-event-none" alt="{{ bclabel.alt_text }}"></div>
+                <div class="mr-16"><img src="{{bclabel.img_url}}" class="label-large pointer-event-none" alt="{{ bclabel.alt_text }}"></div>
                 <div class="w-90">
                     <div class="flex-this space-between">
                         <div><h3 class="mt-0">{{ bclabel.name }}</h3></div>
@@ -184,7 +184,7 @@
     {% for tklabel in tklabels %}
         <div id="open-div-{{ tklabel.unique_id }}" style="height: 0px; overflow: hidden;" class="div-toggle">
             <div class="full-label-card flex-this">
-                <div class="margin-right-16">
+                <div class="mr-16">
                     <img src="{{ tklabel.img_url }}" class="label-large  pointer-event-none" alt="{{ tklabel.alt_text }}">
                 </div>
                 <div class="w-90">
