--- a/templates/partials/_add-projectperson.html
+++ b/templates/partials/_add-projectperson.html
@@ -11,7 +11,7 @@
         {% endfor %}
         {% if not f.instance.pk %}
             <div class="flex-this">
-                <div id="person-form-0" class="flex-this row margin-right-16 mb-8">
+                <div id="person-form-0" class="flex-this row mr-16 mb-8">
                     <div class="mr-1p">
                         <label>{{ f.name.label }}</label>
                         <div class="tooltip"><strong>?</strong>
@@ -23,7 +23,7 @@
                         {{ f.name }}
                     </div>
                     
-                    <div class="margin-right-16">
+                    <div class="mr-16">
                         <label>{{ f.email.label }}</label><br>
                         {{ f.email }}
                     </div>
