--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -14,7 +14,7 @@
 
         <div class="add-translation-form">
             <div class="flex-this w-100">
-                <div class="w-30 margin-right-16"><label>Translated title</label><br>{{ tran_form.translated_name }}</div>
+                <div class="w-30 mr-16"><label>Translated title</label><br>{{ tran_form.translated_name }}</div>
                 <div class="w-30">
 
                     <div class="flex-this">
