--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -13,7 +13,7 @@
         <div><h2 class="mt-0">Engagement Notice</h2></div>
 
         <div class="flex-this flex-end">
-            <div class="margin-right-16 circle-dropdown">
+            <div class="mr-16 circle-dropdown">
                 <i class="pointer fa-solid fa-circle-ellipsis fa-3x"></i>
                 <div class="circle-dropdown-content">
                     <a id="addURLBtn" class="primary-btn">Add Link <i class="fa-regular fa-link-simple"></i></a>
@@ -228,7 +228,7 @@
             <div><h2 class="mt-0">Collections Care Notices</h2></div>
             <div class="flex-this flex-end">
                 
-                <div class="margin-right-16"><a id="openCCNoticeModal" class="primary-btn action-btn">Add Policy <i class="fa-solid fa-circle-plus"></i></a></div>
+                <div class="mr-16"><a id="openCCNoticeModal" class="primary-btn action-btn">Add Policy <i class="fa-solid fa-circle-plus"></i></a></div>
 
                 <div>
                     {% if ccn_download_perm == 1 %}
