--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -334,7 +334,7 @@
                     <div class="mb-8">
                         <label for="privacy_{{ value }}">
                             <div class="flex-this">
-                                <div class="margin-right-16">
+                                <div class="mr-16">
                                     <input 
                                         id="privacy_{{ value }}"
                                         type="radio" 
