--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -51,7 +51,7 @@
         <hr class="searchbar-divider">
 
         <div class="flex-this">
-            <div class="margin-right-16">
+            <div class="mr-16">
                 <form class="default-searchbar" method="GET" action="">
                     <input type="search" name="q" placeholder="Search" autocomplete="off">
                     <button class="search-btn"><i class="fa fa-search fa-lg" aria-hidden="true"></i></button>
