--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -17,7 +17,7 @@
 <div class="content-card-v2 content-card-space">
     <h3 class="mt-0">Step 1. Select a Label to customize</h3>
     <div class="margin-bottom-16 margin-top-16 w-100 about-this-label">    
-        <div class="flex-this ml-16 margin-right-16 pointer-event-none">
+        <div class="flex-this ml-16 mr-16 pointer-event-none">
 
             <div id="target-img-div" class="margin-top-16">
                 <img
