--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -67,7 +67,7 @@
             </a>
         </div>
         <div class="flex-this">
-            <div class="margin-right-16 flex-this align-center"><small class="block"><a href="{% url 'dashboard' %}" class="default-a">Skip this for now</a></small></div>
+            <div class="mr-16 flex-this align-center"><small class="block"><a href="{% url 'dashboard' %}" class="default-a">Skip this for now</a></small></div>
             <div><button id="openJoinRequestModalBtn" class="primary-btn action-btn mt-2p ">Next <i class="fa fa-arrow-right"></i></button></div>
         </div>
      </div>
