--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -121,7 +121,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{admin.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
@@ -194,7 +194,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{editor.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
@@ -267,7 +267,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{viewer.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
@@ -399,7 +399,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{admin.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
@@ -472,7 +472,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{editor.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
@@ -545,7 +545,7 @@
 
                 {% if member_role == 'admin' %}
                     <div class="flex-this">
-                        <div class="margin-right-16 mt-8">
+                        <div class="mr-16 mt-8">
                             <a id="removeMemberBtn_{{viewer.id}}" class="block removeMemberBtn"><small class="darkteal-text bold pointer underline-hover">Remove member</small></a>
                         </div>
                         <div>
