--- a/templates/snippets/pagination.html
+++ b/templates/snippets/pagination.html
@@ -28,7 +28,7 @@
             {% endif %}
 
         {% else %}
-            <span class="grey-text margin-right-16 font-size-14 bold"><i class="fa-solid fa-chevrons-left"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-chevron-left"></i>&nbsp;&nbsp;Previous</span>
+            <span class="grey-text mr-16 font-size-14 bold"><i class="fa-solid fa-chevrons-left"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-chevron-left"></i>&nbsp;&nbsp;Previous</span>
         {% endif %}
 
         <span class="current">{{ items.number }} </span>
@@ -63,7 +63,7 @@
         {% endif %}
     
     {% else %}
-        <span class="grey-text margin-right-16 font-size-14 bold"><i class="fa-solid fa-chevrons-left"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-chevron-left"></i>&nbsp;&nbsp;Previous</span>
+        <span class="grey-text mr-16 font-size-14 bold"><i class="fa-solid fa-chevrons-left"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-chevron-left"></i>&nbsp;&nbsp;Previous</span>
         <span class="current">1</span>
         <span class="grey-text ml-16 font-size-14 bold">Next&nbsp;&nbsp;<i class="fa-solid fa-chevron-right"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-chevrons-right"></i></span>
     {% endif %}
